--- a/android-json-form-wizard/src/main/res/values/ids.xml
+++ b/android-json-form-wizard/src/main/res/values/ids.xml
@@ -79,4 +79,7 @@
     <item name="submit" type="id" />
     <item name="label_dialog_image_src" type="id"/>
     <item name="error_textView" type="id" />
+
+    <item name="simprints_guid" type="id" />
+
 </resources>
