--- a/sample/src/main/res/layout/content_main.xml
+++ b/sample/src/main/res/layout/content_main.xml
@@ -11,86 +11,104 @@
     tools:context="org.smartregister.nativeform.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
 
-        <Button
-            android:id="@+id/child_enrollment"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="BIRTH REGISTER"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/wizard_form"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="WIZARD (MULTI-STEP FORM)"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            <Button
+                android:id="@+id/child_enrollment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="BIRTH REGISTER"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
 
-        <Button
-            android:id="@+id/rules_engine_skip_logic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="RULES ENGINE LOGIC"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            <Button
+                android:id="@+id/wizard_form"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="WIZARD (MULTI-STEP FORM)"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
 
-        <Button
-            android:id="@+id/numbers_selector_widget"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="CONSTRAINTS"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            <Button
+                android:id="@+id/rules_engine_skip_logic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="RULES ENGINE LOGIC"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
 
-        <Button
-            android:id="@+id/generic_dialog_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="GENERIC POPUP"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            <Button
+                android:id="@+id/numbers_selector_widget"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="CONSTRAINTS"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
 
-        <Button
-            android:id="@+id/validation_form_button"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="FORM VALIDATION"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            <Button
+                android:id="@+id/generic_dialog_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="GENERIC POPUP"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
 
-        <Button
-            android:id="@+id/native_form_basic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Basic Form"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            <Button
+                android:id="@+id/validation_form_button"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="FORM VALIDATION"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
 
-        <Button
-            android:id="@+id/expansion_panel_button"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Expansion Panel"
-            android:textColor="@android:color/white"
-            android:theme="@style/AppTheme" />
+            <Button
+                android:id="@+id/native_form_basic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Basic Form"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/expansion_panel_button"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Expansion Panel"
+                android:textColor="@android:color/white"
+                android:theme="@style/AppTheme" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/form_results"
+                android:layout_gravity="center"
+                android:textColor="@color/primary"
+                android:text="Results will be shown here"
+                />
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
 </RelativeLayout>
