--- a/android-json-form-wizard/src/main/res/values/ids.xml
+++ b/android-json-form-wizard/src/main/res/values/ids.xml
@@ -83,6 +83,7 @@
     <item name="label_dialog_image_src" type="id"/>
     <item name="error_textView" type="id" />
     <item name="maxSelectable" type="id"/>
+    <item name="maxSelectMessage" type="id" />
 
     <item name="simprints_guid" type="id" />
 
